--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.10.1",
+    "date-fns": "^4.1.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
+    "react-currency-input-field": "^3.10.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
