--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx src/lib/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.10.1",
@@ -16,6 +19,7 @@
     "next-auth": "^4.24.11",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-currency-input-field": "^3.10.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
@@ -34,6 +38,8 @@
     "eslint-config-next": "15.3.4",
     "prisma": "^6.10.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
