--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-currency-input-field": "^3.10.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.59.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
